[package]
name = "bevy_headless_console"
version = "0.12.0"
edition = "2021"
authors = ["Philpax <me@philpax.me>", "RichoDemus <git@richodemus.com>"]
homepage = "https://github.com/philpax/bevy-headless-console"
repository = "https://github.com/philpax/bevy-headless-console"
description = "headless dev console for bevy, based on bevy-console"
license = "MIT"
readme = "README.md"

[dependencies]
bevy = { version = "0.17", default-features = false }
clap = { version = "4.5", features = ["derive"] }
bevy_headless_console_derive = { path = "./bevy_headless_console_derive", version = "0.5.0" }
shlex = "1.3"

[workspace]
members = ["bevy_headless_console_derive"]
